--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -13,12 +13,15 @@
         <p class="price">{{price}}</p>
       </div>
       <div class="card-action actions">
-        <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
-        <a href="/courses/{{id}}/edit?allow=true">Редактировать</a>
-        <form action="/card/add" method="POST">
-          <input type="hidden" name="id" value="{{id}}">
-          <button type="submit" class="btn btn-primary">Купить</button>
-        </form>
+        {{#if @root.isAuth}}
+          <a href="/courses/{{id}}" target="_blank">Открыть курс</a>
+          <a href="/courses/{{id}}/edit?allow=true">Редактировать</a>  
+          <form action="/card/add" method="POST">
+            <input type="hidden" name="id" value="{{id}}">
+            <input type="hidden" name="_csrf" value="{{ @root.csrf }}">
+            <button type="submit" class="btn btn-primary">Купить</button>
+          </form>
+        {{/if}}
       </div>
     </div>
   </div>
