--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -9,7 +9,7 @@
     <div id="login" class="col s6 offset-s3">
       {{#if error}}
         <p> {{error}} </p>
-      {{#/if}}
+      {{/if}}
       <h2>Войти в магазин</h2>
       <form action="/auth/login" method="POST">
         <div class="input-field">
@@ -25,14 +25,14 @@
         </div>
 
         <input type="hidden" name="_csrf" value="{{ csrf }}">
-
+        <a href="/auth/reset/">забыли пароль</a>
         <button class="btn btn-primary" type="submit">Войти</button>
       </form>
     </div>
     <div id="register" class="col s6 offset-s3">
       {{#if error}}
         <p> {{error}} </p>
-      {{#/if}}
+      {{/if}}
       <h2>Создать аккаунт</h2>
       <form action="/auth/register" method="POST">
         <div class="input-field">
